--- a/package.json
+++ b/package.json
@@ -16,19 +16,24 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.5",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.3",
+    "@supabase/supabase-js": "^2.46.2",
     "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
     "expo-dev-launcher": "^5.0.17",
+    "expo-file-system": "~18.0.4",
+    "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.6",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "firebase": "^10.5.2",
+    "jotai": "^2.10.3",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -37,6 +42,7 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
