--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@auth/core": "0.36.0",
+    "@convex-dev/auth": "^0.0.75",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.0.5",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.3",
     "@supabase/supabase-js": "^2.46.2",
+    "convex": "^1.17.3",
     "expo": "^52.0.11",
     "expo-constants": "~17.0.3",
     "expo-dev-client": "~5.0.4",
