--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@supabase/supabase-js": "^2.46.2",
     "convex": "^1.17.3",
     "expo": "^52.0.11",
+    "expo-camera": "~16.0.8",
     "expo-constants": "~17.0.3",
+    "expo-contacts": "~14.0.2",
     "expo-dev-client": "~5.0.4",
     "expo-dev-launcher": "^5.0.17",
     "expo-file-system": "~18.0.4",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.6",
+    "expo-secure-store": "~14.0.0",
+    "expo-sensors": "~14.0.1",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
@@ -46,7 +50,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-native-webview": "13.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
