--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@convex-dev/auth": "^0.0.75",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-menu/menu": "^1.1.7",
     "@react-navigation/bottom-tabs": "^7.0.5",
     "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.0.3",
@@ -33,6 +34,7 @@
     "expo-file-system": "~18.0.4",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.3",
     "expo-router": "~4.0.6",
     "expo-secure-store": "~14.0.0",
     "expo-sensors": "~14.0.1",
@@ -46,12 +48,17 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-ios-context-menu": "^2.5.2",
+    "react-native-ios-utilities": "^4.5.1",
+    "react-native-maps": "1.18.0",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "zeego": "^2.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
