--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-dev-client": "~5.0.4",
     "expo-dev-launcher": "^5.0.17",
     "expo-file-system": "~18.0.4",
+    "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.3",
@@ -43,6 +44,7 @@
     "expo-web-browser": "~14.0.1",
     "firebase": "^10.5.2",
     "jotai": "^2.10.3",
+    "lottie-react-native": "7.1.0",
     "nativewind": "latest",
     "react": "18.3.1",
     "react-dom": "18.3.1",
