--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ReuseHub",
-    "slug": "ReuseHub",
+    "slug": "reusehub",
     "version": "1.0.0",
     "scheme": "ReuseHub",
     "web": {
@@ -24,7 +24,9 @@
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ],
-      ["expo-font"]
+      [
+        "expo-font"
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
@@ -38,7 +40,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.mgasowski.reusehub"
@@ -48,15 +52,20 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "pl.digitalgoose.reusehub"
+      "package": "pl.digitalgoose.reusehub",
+      "permissions": [
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION"
+      ]
     },
     "extra": {
       "router": {
         "origin": false
       },
       "eas": {
-        "projectId": "15e1498b-92c7-44ab-9da0-ce9d1ff288ab"
+        "projectId": "2f7ba8f7-0d29-4ce1-813f-b4e5306b1682"
       }
-    }
+    },
+    "owner": "mgasowski"
   }
 }
