--- a/cesconfig.json
+++ b/cesconfig.json
@@ -1,6 +1,6 @@
 {
   "cesVersion": "2.12.1",
-  "projectName": "ReVive",
+  "projectName": "ReuseHub",
   "packages": [
     {
       "name": "expo-router",
