--- a/app.json
+++ b/app.json
@@ -24,9 +24,7 @@
           "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
         }
       ],
-      [
-        "expo-font"
-      ]
+      ["expo-font"]
     ],
     "experiments": {
       "typedRoutes": true,
@@ -40,12 +38,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mgasowski.reusehub"
+      "bundleIdentifier": "pl.digitalgoose.reusehub"
     },
     "android": {
       "adaptiveIcon": {
