--- a/eas.json
+++ b/eas.json
@@ -5,8 +5,10 @@
   },
   "build": {
     "development": {
-      "developmentClient": true,
-      "distribution": "internal"
+      "env": {
+        "CONVEX_DEPLOYMENT": "dev:third-mink-72",
+        "EXPO_PUBLIC_CONVEX_URL": "https://third-mink-72.convex.cloud"
+      }
     },
     "preview": {
       "distribution": "internal"
