--- a/app.json
+++ b/app.json
@@ -52,6 +52,7 @@
       "bundleIdentifier": "pl.digitalgoose.reusehub"
     },
     "android": {
+      "versionCode": 2,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
