--- a/app.json
+++ b/app.json
@@ -21,15 +21,15 @@
       [
         "expo-location",
         {
-          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+          "locationAlwaysAndWhenInUsePermission": "$(PRODUCT_NAME) needs your location to find nearby items you might like."
         }
       ],
       ["expo-font"],
       [
         "expo-camera",
         {
-          "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
-          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
+          "cameraPermission": "$(PRODUCT_NAME) needs your camera to take pictures of items you want to share.",
+          "microphonePermission": " $(PRODUCT_NAME) needs your microphone to record audio when taking pictures of items you want to share.",
           "recordAudioAndroid": true
         }
       ]
@@ -39,7 +39,7 @@
       "tsconfigPaths": true
     },
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/appicon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -48,20 +48,27 @@
     },
     "assetBundlePatterns": ["**/*"],
     "ios": {
+      "buildNumber": "6",
       "supportsTablet": true,
       "bundleIdentifier": "pl.digitalgoose.reusehub"
     },
     "android": {
-      "versionCode": 2,
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyCjvI0GeGPWqo0hb4SeDs0mf5lFpmmMOa4"
+        }
+      },
+      "versionCode": 6,
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/appicon.png",
         "backgroundColor": "#ffffff"
       },
       "package": "pl.digitalgoose.reusehub",
       "permissions": [
         "android.permission.ACCESS_COARSE_LOCATION",
         "android.permission.ACCESS_FINE_LOCATION"
-      ]
+      ],
+      "blockedPermissions": ["android.permission.ACTIVITY_RECOGNITION"]
     },
     "extra": {
       "router": {
