--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
     "expo-location": "~18.0.3",
+    "expo-notifications": "~0.29.11",
     "expo-router": "~4.0.6",
     "expo-secure-store": "~14.0.0",
     "expo-sensors": "~14.0.1",
